tests/e2e/validation-webhook/deny/response/invalid-output-type/policy.yaml
# yaml-language-server: $schema=../../../../../../.schemas/json/authorizationpolicy-envoy-v1alpha1.json
apiVersion: envoy.kyverno.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: invalid-output-type
spec:
  deny:
  - response: >
      'bye'
